[project]
name = "career-navigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "pandas>=3.0.2",
    "pypdf>=6.10.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
